[package]
name = "realpath-rs"
version = "0.1.0"
edition = "2021"
description = "A cross-platform Rust equivalent of python3's `os.path.realpath`"
license = "MIT"
authors = ["Aniruddh Radhakrisnan<aniruddh.iitb.92@gmail.com>"]
repository = "https://www.github.com/loggerheads-with-binary/realpath-rs" 

[lib]
name = "realpath"
path = "src/lib.rs"
types = ["cdylib" , "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-absolutize = "*"

