[package]
name = "realpath-rs"
version = "0.2.0"
edition = "2021"
description = "A cross-platform Rust equivalent of python3's `os.path.realpath`"
license = "MIT"
authors = ["Aniruddh Radhakrisnan<aniruddh.iitb.92@gmail.com>"]
repository = "https://www.github.com/loggerheads-with-binary/realpath-rs" 
readme = "README.md"

[lib]
name = "realpath"
path = "src/lib.rs"
types = ["cdylib" , "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-absolutize = "3.0.14"

